# ImageProcessing

./: CMakeLists.txt  README.md
demo/: demo.cpp
include/: Processing.hpp  imageprocessing.hpp  main.hpp  process.hpp
src/: Processing.cpp  main.cpp  process.cpp
