CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )

PROJECT( ImageProcessing )

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)

INCLUDE_DIRECTORIES(include)

SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)
ADD_LIBRARY(${PROJECT_NAME} SHARED
        src/process.cpp
)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
ADD_EXECUTABLE( my_DIP demo/demo.cpp)

TARGET_LINK_LIBRARIES(my_DIP
        ${PROJECT_NAME})

